--- a/techtalentblog/src/main/resources/templates/blogpost/index.html
+++ b/techtalentblog/src/main/resources/templates/blogpost/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Blog Site</title>
 </head>
 <body>
     <h1>Welcome to our Blog Post Site!</h1>
     <h3>Check out our blogs!</h3>
-</body>
+
 
 <p>Please use the form below to submit a blog post:</p>
 <form action="#" th:action="@{/}" th:object="${blogPost}" method="post">
@@ -19,7 +20,7 @@
 </tr>
 <tr>
     <td>Author</td>
-<td><input type="text" th:field="*{suthor}" /></td>
+<td><input type="text" th:field="*{author}" /></td>
 </tr>
 <tr>
     <td>Blog Entry:</td>
@@ -34,5 +35,8 @@
 </form>
 
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</body>
 
 </html>
