--- a/techtalentblog/src/main/resources/templates/blogpost/index.html
+++ b/techtalentblog/src/main/resources/templates/blogpost/index.html
@@ -2,42 +2,68 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Blog Site</title>
+        <link rel="stylesheet" href="/Style/style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Blog Site</title>
 </head>
-
 <body>
-    <div class="container">
-        <h1>Welcome to our Blog Post Site!</h1>
-        <h3>Check out our blogs!</h3>
-
-
-        <p>Please use the form below to submit a blog post:</p>
-        <form action="#" th:action="@{/}" th:object="${blogPost}" method="post">
-            <table>
-                <tr>
-                    <td>Title</td>
-                    <td><input type="text" th:field="*{title}" /></td>
-                </tr>
-                <tr>
-                    <td>Author</td>
-                    <td><input type="text" th:field="*{author}" /></td>
-                </tr>
-                <tr>
-                    <td>Blog Entry:</td>
-                    <td><input type="text" th:field="*{blogEntry}" /></td>
-                </tr>
-                <tr>
-                    <td><button type="submit">Submit Your Post</td>
-                </tr>
-
-            </table>
-
-        </form>
+<!-- Start Nav Bar -->
+<nav class="navbar navbar-light navbar-expand-lg navbar-light"  style="background-color: #FFEEEE;">
+    <a class="navbar-brand" href="#">Cozy Collective</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link active" href="/index.html">Home  <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blogpost/new">New Post</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+  <!-- End Nav bar -->
+  <div style="margin: 50px;" class="text-center">
+
+  <H1>Welcome to the Cozy Collective!</H1>
+        <h3>Check out our posts below!</h3>
+        <a th:href="@{/blogpost/new}">
+            <button class="btn btn-info">Create a new blog post</button>
+            </a>
+        </div>
+        <div class="container">
+        
+    <div class="row">
+        <div th:each="blog:${posts}">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class ="panel-heading">
+                        <p th:text="${blog.title}"/>
+                    </div>
+                    <div class="panel-body">
+                        <p th:text="${blog.author}"/>
+                        <p th:text="${blog.blogEntry}"/>
+                    </div>
+                    <div class="panel-footer">
+                        <!-- Link to Update, Show, Destroy -->
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+
+
+
+</div>
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
