--- a/techtalentblog/src/main/resources/templates/blogpost/index.html
+++ b/techtalentblog/src/main/resources/templates/blogpost/index.html
@@ -2,75 +2,74 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Style/style.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog Site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div th:replace="fragments/styling :: headStyles"></div>
+    <title>Blog Site</title>
 </head>
-<body>
-<!-- Start Nav Bar -->
-<nav class="navbar navbar-light navbar-expand-lg navbar-light"  style="background-color: #FFEEEE;">
-    <a class="navbar-brand" href="#">Cozy Collective</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link active" href="/index.html">Home  <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/blogpost/new">New Post</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End Nav bar -->
-  <div style="margin: 50px;" class="text-center">
 
-  <H1>Welcome to the Cozy Collective!</H1>
+<body>
+    <div th:replace="fragments/navbar :: navbar"></div>
+    <div style="margin: 50px;" class="text-center">
+
+        <H1>Welcome to the Cozy Collective!</H1>
         <h3>Check out our posts below!</h3>
-        <a th:href="@{/blogpost/new}">
-            <button class="btn btn-info">Create a new blog post</button>
-            </a>
-        </div>
-        <div class="container">
-        
-    <div class="row">
-        <div th:each="blog:${posts}">
-            <div class="col-md-6">
-                <div class="panel panel-default">
-                    <div class ="panel-heading">
-                        <p th:text="${blog.title}"/>
+    </div>
+
+    <div class="container">
+        <div class="row de-flex justify-content-around">
+            <div th:each="blog:${posts}">
+                <div class="card col-md-6 p-0 mb-3">
+
+                    <div class="card-header">
+                        <h4 th:text="${blog.title}"></h4>
                     </div>
-                    <div class="panel-body">
-                        <p th:text="${blog.author}"/>
-                        <p th:text="${blog.blogEntry}"/>
+                    <div class="card-body">
+                        <p class="card-text" th:text="${blog.author}"></p>
+                        <p class="card-text" th:text="${blog.blogEntry}"></p>
                     </div>
-                    <div class="panel-footer">
-                        <!-- Link to Update, Show, Destroy -->
+                    <div class="card-footer">
+                        <div class="form-group">
+                            <a href="#" th:href="@{blogpost/edit/{id}(id=${blog.id})}" class="card-line btn btn-info">Edit Post</a>
+                            <!-- <a href="#" th:href="@{blogpost/delete/{id}(id=${blog.id})}" class="card-link btn btn-danger">Delete Post</a> -->
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                                Delete Post
+                              </button>
+                        </div>
+                        </form>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to delete this post?</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <!-- <div class="modal-body">
+                                  ...
+                                </div> -->
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                                  <a  href="#" th:href="@{blogpost/delete/{id}(id=${blog.id})}" class="btn btn-danger">Yes, delete</a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                     </div>
                 </div>
             </div>
         </div>
-</div>
+    </div>
+
+<!-- Button trigger modal -->
+
+  
+  <!-- Modal -->
+  
+    <div th:replace="fragments/styling :: bodyLinks"></div>
 
 
-
-</div>
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
