--- a/techtalentblog/src/main/resources/templates/blogpost/new.html
+++ b/techtalentblog/src/main/resources/templates/blogpost/new.html
@@ -4,30 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <div th:replace="fragments/styling :: headStyles" ></div>
     <title>New Blog Post</title>
 </head>
 <body>
-        <!-- Start Nav Bar -->
-<nav class="navbar navbar-light navbar-expand-lg navbar-light"  style="background-color: #FFEEEE;">
-    <a class="navbar-brand" href="#">Cozy Collective</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home  </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link active" href="/blogpost/new">New Post <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End Nav bar -->
+  <div th:replace="fragments/navbar :: navbar" ></div>
   <div class="container">
     <div style="margin: 50px;"></div>
       <h1>Please use the form below to submit a blog post:</h1>
@@ -52,12 +33,6 @@
   
 
 </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
+<div th:replace="fragments/styling :: bodyLinks"></div>
 </body>
 </html>
