--- a/techtalentblog/src/main/resources/templates/blogpost/result.html
+++ b/techtalentblog/src/main/resources/templates/blogpost/result.html
@@ -4,32 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href="/Style/style.css">
+    <div th:replace="fragments/styling :: headStyles" ></div>
     <title>New Blog Post Created</title>
 </head>
 
 <body>
-<!-- Start Nav Bar -->
-<nav class="navbar navbar-light navbar-expand-lg navbar-light"  style="background-color: #FFEEEE;">
-    <a class="navbar-brand" href="#">Cozy Collective</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/blogpost/new">New Post</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End Nav bar -->
+  <div th:replace="fragments/navbar :: navbar"></div>
     <div class="container">
         <div style="margin: 50px;"></div>
     <div class="card">
@@ -37,26 +17,17 @@
             Thank you for your submission
         </div>
         <div class="card-body">
-          <h3 class="card-title" th:text="${title}"/>
-          <h5 class="card-title" th:text="${author}"/>
-          <p class="card-text" th:text="${blogEntry}" />
-          <a th:href="@{/}">
-          <button class="btn btn-info">See your post!</button>
-        </a>
+          <h3 class="card-title" th:text="${blogPost.title}"/>
+          <h5 class="card-title" th:text="${blogPost.author}"/>
+          <p class="card-text" th:text="${blogPost.blogEntry}" />
+          <a th:href="@{/}"><button class="btn btn-info">See your post!</button></a>
+          <a th:href="@{/blogpost/new}"><button class= "btn btn-info">Submit a New Post</button></a>
+          <a th:href="@{/blogpost/edit/{id}(id = ${blogPost.id})}"><button class= "btn btn-info">Edit Your Post</button></a>
+
         </div>
       </div>
     </div>
-    
-    
-    
-    
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+    <div th:replace="fragments/styling :: bodyLinks"></div>
 </body>
 
 </html>
