--- a/techtalentblog/src/main/resources/templates/blogpost/new.html
+++ b/techtalentblog/src/main/resources/templates/blogpost/new.html
@@ -26,9 +26,9 @@
             <label for="exampleFormControlTextarea1">Blog Entry:</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" th:field="*{blogEntry}"></textarea>
           </div>
-          <a th:href="@{/blogpost/result}">
-            <button class="btn btn-info">Submit your entry</button>
-            </a>
+          <!-- <a th:href="@{/blogpost/result}"> -->
+            <button class="btn btn-info" type="submit">Submit your entry</button>
+            <!-- </a> -->
       </form>
   
 
